HelloUltraviolet/Fixtures/RejectedSource/FFI/UnsupportedLibraryKind/Source/Main.uv
//! Rejected FFI specimen for unsupported foreign library kinds.

#library(name: "HostFramework", kind: "framework")
extern "C" {
    public procedure importedValue() -> i32
}

